RESOLVED FIXED276368
[WebGPU] OOB buffer access as offset is not considered in max vertex counts
https://bugs.webkit.org/show_bug.cgi?id=276368
Summary [WebGPU] OOB buffer access as offset is not considered in max vertex counts
Mike Wyrzykowski
Reported 2024-07-09 09:10:57 PDT
[WebGPU] OOB buffer access as offset is not considered in max vertex counts
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-09 09:11:53 PDT
Mike Wyrzykowski
Comment 2 2024-07-09 09:14:50 PDT
EWS
Comment 3 2024-07-09 12:25:29 PDT
Committed 280789@main (c354673f409e): <https://commits.webkit.org/280789@main> Reviewed commits have been landed. Closing PR #30605 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.