[WebGPU] OOB buffer access as offset is not considered in max vertex counts https://bugs.webkit.org/show_bug.cgi?id=276368 <radar://131387875>

Reviewed by Tadeu Zagallo.

Vertex / instance count calculations failed to account for the buffer offset.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::computeMininumVertexInstanceCount const):

Canonical link: https://commits.webkit.org/280789@main